--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
   <div class="checkbox">
     <label>
-      <input type="checkbox"> Remember me
+      <input type="checkbox"> Remember
     </label>
   </div>
   <button type="submit" class="btn btn-primary">Sign in</button>
